# agri-grasp-ros2

./: README.md  analyze_branch.py  gitignore
docs/: report_3.docx
grasp_prep/: gz_grab.py  orange_completed.csv  orange_completed.ply  orange_diameter.txt  orange_fit.json  orange_partial.csv  orange_partial.ply  orange_points.csv  single_view.py  sweep_results.csv  sweep_validation.py
grasp_prep/old/: aim_test.py  build_orange.py  capture3.py  centers_check.py  fit_sphere.py  move.py  orange_fused.ply  orange_single.ply  orange_two.ply  two_view.py  view_front.ply  view_left.ply  view_top.ply
install/: local_setup.sh  setup.sh
install/IPython doctest plugin/share/IPython doctest plugin/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/fruit_models/share/fruit_models/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/robotiq_controllers/include/robotiq_controllers/: robotiq_activation_controller.hpp
install/robotiq_controllers/share/robotiq_controllers/: controller_plugins.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  (+2 more)
log/: latest_build
matlab/: diameter_measurer.m  grip_alg.m  mug.stl  orange.stl
myenv/: pyvenv.cfg
src/fruit_models/: CMakeLists.txt
src/fruit_models/models/apple/: apple_config.xml
src/fruit_models/models/tree_branch/: model.sdf
src/ros2_robotiq_gripper/robotiq_description/: CMakeLists.txt
src/ros2_robotiq_gripper/robotiq_driver/: CMakeLists.txt
stl/: peach.stl
(+105 files in other folders)
